[package]
name = "copilot"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
deepspeech = "0.9.1"
device_query = "2.1.0"
openai-api-rs = "4.1.1"
rodio = "0.18.1"
tesseract = "0.15.1"
image = "0.25.1"
scrap = "0.5.0"
ringbuf = "0.4.1"
crossbeam-channel = "0.5.13"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = "0.11.0"
futures = "0.3.30"
google-cloud-googleapis = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
base64 = "0.22.1"
reqwest = { version = "0.12.5", features = ["json"] }
ocrs = "0.8.0"
rusty-tesseract = "1.1.10"
tempfile = "3.10.1"
serde_json = "1.0.118"
screenshots = "0.8.10"
tts = "0.26.1"
mockall = "0.12.1"
